# oziebot-v2-backend

./: .dockerignore  .gitignore  Makefile  STRATEGY_EXTENSION_GUIDE.md  apps  docker-compose.yml  env.example  package-lock.json  package.json  packages
.github/workflows/: ci.yml  (+2 more)
backend/services/alerts-worker/: Dockerfile  pyproject.toml
backend/services/alerts-worker/src/oziebot_alerts_worker/: __init__.py  __main__.py  adapters.py  config.py  service.py  templates.py
backend/services/alerts-worker/tests/: test_adapters.py  test_notification_service.py
backend/services/api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/services/api/alembic/: env.py
backend/services/api/alembic/versions/: 001_initial_tenants.py  002_tenant_default_trading_mode.py  003_auth_users_sessions.py  004_platform_management.py  005_stripe_billing_entitlements.py  006_exchange_connections_coinbase.py  007_user_token_permissions.py  008_user_strategies.py  009_user_strategy_states.py  010_strategy_capital_allocation.py  011_market_data_history.py  012_strategy_signal_pipeline.py  013_risk_events.py  014_execution_orders_and_trades.py  015_execution_reconciliation_events.py  016_notification_framework.py  017_backtesting_analytics.py  018_token_strategy_policy.py  019_root_admin_strategy_access.py  020_strategy_baseline_config.py  021_fee_aware_execution.py  022_trade_intelligence_ai_ready.py  023_api_performance_indexes.py  024_position_lifecycle_ts.py  025_user_full_name.py  026_dynamic_sizing_defaults.py
backend/services/api/src/oziebot_api/: __init__.py  config.py  main.py
backend/services/api/src/oziebot_api/db/: session.py
backend/services/api/tests/: conftest.py  test_admin_runtime.py  test_admin_token_policy.py  test_alerts_notifications.py  test_auth.py  test_backtesting_api.py  test_billing_entitlements.py  test_coinbase_jwt.py  test_dashboard.py  test_integrations_coinbase.py  test_me_analytics.py  test_performance_observability.py  test_slo_monitor.py  test_strategies.py  test_strategy_allocations.py  test_token_permissions.py  test_trade_intelligence_service.py  test_trade_logs.py
backend/services/api/tests/fixtures/: backtest_sample_dataset.json
backend/services/execution-engine/: Dockerfile  pyproject.toml
backend/services/execution-engine/src/oziebot_execution_engine/: __init__.py  __main__.py  adapters.py  coinbase_client.py  config.py  credential_crypto.py  reconciliation.py  service.py  state_machine.py
backend/services/execution-engine/tests/: test_coinbase_client.py  test_reconciliation.py  test_service.py
backend/services/market-data-ingestor/: Dockerfile  pyproject.toml
backend/services/market-data-ingestor/src/oziebot_market_data_ingestor/: __main__.py  coinbase_client.py  config.py  monitoring.py  normalizer.py  policy_refresh.py  redis_cache.py  signal_panel.py  simulation.py  stale.py  storage.py  universe.py
backend/services/market-data-ingestor/tests/: test_bootstrap.py  test_coinbase_client.py  test_monitoring.py  test_normalizer.py  test_redis_cache.py  test_signal_panel.py  test_simulation.py  test_stale.py  test_universe.py  test_universe_fallback.py
backend/services/strategy-engine/: Dockerfile  pyproject.toml
backend/services/strategy-engine/src/oziebot_strategy_engine/: __init__.py  __main__.py  registry.py  runner.py  strategy.py
backend/services/strategy-engine/tests/: test_day_trading_strategy.py  test_momentum_strategy.py  test_reversion_strategy.py  test_runner.py
(+121 files in other folders)
