[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oziebot-alerts-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "oziebot-common",
  "oziebot-domain",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "sqlalchemy>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/oziebot_alerts_worker"]
