[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oziebot-execution-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "oziebot-domain",
  "oziebot-common",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "pyjwt>=2.9",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oziebot_execution_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/domain/src", "../../packages/py-common/src"]
