[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oziebot-market-data-ingestor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "oziebot-domain",
    "oziebot-common",
    "redis>=5.0",
    "httpx>=0.27",
  "websockets>=12.0",
  "certifi>=2024.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oziebot_market_data_ingestor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
