[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oziebot-strategy-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "oziebot-domain",
  "oziebot-common",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oziebot_strategy_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
